<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/fondo"
    tools:context=".loginprincipal">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar6"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="379dp"
            android:layout_height="100dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="USUARIO"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:background="@drawable/stylo_bordes"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar7"
            android:layout_width="377dp"
            android:layout_height="20dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CONTRASEÑA"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:background="@drawable/stylo_bordes"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar8"
            android:layout_width="379dp"
            android:layout_height="20dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

    </LinearLayout>


    <Button

        android:id="@+id/consulta"
        android:layout_width="163dp"
        android:layout_height="70dp"
        android:background="@drawable/boton1stylo"
        android:text="INGRESAR"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

</androidx.constraintlayout.widget.ConstraintLayout>