...
                android:gravity="center"
                android:text="@string/usuario"
                android:textColor="#FFEB3B"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usuest"
                android:layout_width="272dp"
                android:layout_height="48dp"
                android:background="@drawable/stylo_bordes"
                android:ems="10"
                android:hint="@string/nada"
                android:inputType="textPersonName"
...
                android:gravity="center"
                android:text="@string/pass"
                android:textColor="#FFEB3B"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contres"
                android:layout_width="272dp"
                android:layout_height="48dp"
                android:background="@drawable/stylo_bordes"
                android:ems="10"
                android:hint="@string/nada"
                android:inputType="textPersonName"
...
